--- a/style.css
+++ b/style.css
@@ -6,9 +6,20 @@
 }
 
  
-#banner{
+.banner{
     height: 450px;
     width: 750px;
+    background-color: blue;
+}
+
+ul{
+
+    display: flex;
+    flex-direction: row;
+}
+
+li{
+    list-style: none;
 }
 
 li a{
@@ -16,6 +27,14 @@ li a{
     text-decoration: none;
     color: #ffffff;
     font-size: 20px;
+    padding: 25px;
+    
+}
+
+nav{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 #logo{
