--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
  
 .banner{
     height: 450px;
-    width: 750px;
-    background-color: blue;
+    width: 850px;
+    background-image: url("./assents/banner.png"); /*Ele adiciona uma imagem como fundo*/
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 ul{
@@ -35,9 +37,16 @@ nav{
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 
 #logo{
     height:100px ;
     width:100px ;
 }
+
+.bi{
+    font-size: 30px;
+    color: #4c544c;
+}
+
