--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 
 *{
- background-color: #1a1a1a;
+ 
  padding: 0;
  margin: 0;
 }
 
+body{
+    background-color: #1a1a1a;
+}
  
 .banner{
     height: 450px;
@@ -12,6 +15,8 @@
     background-image: url("./assents/banner.png"); /*Ele adiciona uma imagem como fundo*/
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
 }
 
 ul{
@@ -50,3 +55,18 @@ nav{
     color: #4c544c;
 }
 
+.texto-banner{
+    color: #ffffff;
+    font-size: 25px;
+}
+
+.btn{
+    height: 40px;
+    width: 130px;
+    border-radius: 55px; /*Deixa a borda redonda*/
+    border: none; /*Serve para remover a borda*/
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 19px;
+    background-color: #333333;
+}
