--- a/style.css
+++ b/style.css
@@ -70,3 +70,13 @@ nav{
     font-size: 19px;
     background-color: #333333;
 }
+
+.banner-estrutura{
+   width: 220px;
+   
+}
+
+.section-banner{
+    display: flex;
+    justify-content: center;
+}
