--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ nav{
 .texto-banner{
     color: #ffffff;
     font-size: 25px;
+   
 }
 
 .btn{
@@ -69,14 +70,76 @@ nav{
     font-weight: bold;
     font-size: 19px;
     background-color: #333333;
+    margin: 20px;
 }
 
 .banner-estrutura{
    width: 220px;
+   padding: 30px;
    
 }
 
 .section-banner{
     display: flex;
     justify-content: center;
+}
+
+.titulo{
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.estrutura-titulo{
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
+
+.produtos{
+height: 380px;
+width: 250px;
+}
+
+.valor{
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 30px;
+
+}
+
+.card-texto{
+    display: flex;
+    justify-content: center;
+    
+}
+.card{
+    width: 250px;
+    height: 430px;
+}
+
+.cores{
+    height: 15px;
+    width: 15px;
+    border-radius: 100%;
+}
+
+.vermelho{
+    background-color: red;
+}
+
+.azul{
+    background-color: blue;
+}
+
+.amarelo{
+    background-color: yellow;
+}
+
+.laranja{
+    background-color: orangered;
+}
+
+.verde{
+    background-color: green;
 }
