--- a/style.css
+++ b/style.css
@@ -169,3 +169,23 @@ width: 250px;
     gap: 20px;  /* Ele dar uma distância igual entre os elementos */
    
 }
+
+.banner-xbox{
+    background-image: url("./assents/x-box.png");
+    height: 450px;
+    width: 850px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.texto-xbox{
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: 700;
+   
+}
+
+.banner-xbox{
+    display: flex;
+    justify-content: end;
+}
